<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Rubros</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="boton1">Agregar valores nuevos</string>
    <string name="label1">Nombre Ciclo nuevo</string>
    <string name="boton2">Crear nuevo ciclo</string>
    <string name="title_activity_main_activity2">MainActivity2</string>
    <string name="boton3">Ingresar valores</string>
    <string name="boton4">Crear nuevos rubros</string>
    <string name="textoEspacio"></string>
    <string name="title_activity_main_activity3">MainActivity3</string>
    <string name="nombreRubro">Nombre Rubro</string>
    <string name="tipoRubro">Tipo</string>
    <string name="entrada">entrada</string>
    <string name="salida">salida</string>
    <string name="DineroEsperado">Valor Esperado</string>
    <string name="crearRubro">Crear Rubro</string>
    <string name="title_activity_main_activity4">MainActivity4</string>
    <string name="texto5">Ingrese valor</string>
    <string name="agregarValorRubro">Agregue valor rubro</string>
    <string name="espacio2"></string>
    <string name="reporte">Reporte</string>
    <string name="title_activity_main_activity5">MainActivity5</string>
    <string name="volver">Volver</string>

</resources>
